01_DeamonSet_multitool.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multitool-daemonset
  labels:
    app: tool
spec:
  selector:
    matchLabels:
      app: tool
  template:
    metadata:
      labels:
        app: tool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: vol
          mountPath: /node/syslog
          readOnly: true
      volumes:
        - name: vol
          hostPath:
            path: /var/log/syslog
