01_Persisten_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-busybox
  labels:
    app: mult-box
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mult-box
  template:
    metadata:
      labels:
        app: mult-box
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
          - mountPath: /multitool-storage
            name: local-storage
      - name: busybox
        image: busybox:1.36
        command: ['sh', '-c', 'while true; do echo test volume >> /busybox-storage/test; sleep 5; done']
        volumeMounts:
          - mountPath: /busybox-storage
            name: local-storage
      volumes:
        - name: local-storage
          persistentVolumeClaim:
            claimName: local-pvc
