01_echoserver_hello_world.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
     app: echoserver
  name: hello-world
spec:
      containers:
      - name: echoserver
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
