02_Persisten_volume_nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  labels:
    app: mult
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mult
  template:
    metadata:
      labels:
        app: mult
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
          - mountPath: /multitool-storage
            name: nfs-storage
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
