01_configMap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: ngmult
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngmult
  template:
    metadata:
      labels:
        app: ngmult
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name:  configmap-volume
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: configmap-volume
        configMap:
          name: config-map-nginx
            
---

apiVersion: v1
kind: Service
metadata:
  name: ngmult-svc
spec:
  ports: 
    - name: nginx
      port: 10080
      targetPort: 80
  selector:
    app: ngmult
