02_Deploy_nginx_init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: ng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ng
  template:
    metadata:
      labels:
        app: ng
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ng-svc
spec:
  ports: 
    - name: nginx
      port: 10080
      targetPort: 80
  selector:
    app: ng
