02_configMap_SSL.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: ngmult
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngmult
  template:
    metadata:
      labels:
        app: ngmult
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name:  configmap-volume
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: configmap-volume
        configMap:
          name: config-map-nginx

---

apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  ports: 
    - name: front
      port: 10080
      targetPort: 80
  selector:
    app: ngmult

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: microk8s.test.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend
            port:
              name: front
  tls:
  - hosts:
    - microk8s.test.ru
    secretName: secret-tls
